lexer/tests/snapshots/lexer__lex_string_literals-2.snap
---
source: lexer/tests/lexer.rs
description: "\"hello"
expression: "lexer.into_iter().collect::<Vec<Token>>()"
---
[
    UnfinishedStringLiteral("\"hello") at 0:0,
]
