lexer/tests/snapshots/lexer__lex_string_literals-5.snap
---
source: lexer/tests/lexer.rs
description: " { \"Bearer token\" } "
expression: "lexer.into_iter().collect::<Vec<Token>>()"
---
[
    LBracket("{") at 0:1,
    StringLiteral("\"Bearer token\"") at 0:3,
    RBracket("}") at 0:18,
]
