lexer/tests/snapshots/lexer__lex_string_literals.snap
---
source: lexer/tests/lexer.rs
description: "\"hello\""
expression: "lexer.into_iter().collect::<Vec<Token>>()"
---
[
    StringLiteral("\"hello\"") at 0:0,
]
